limit the scroll width for top news to avoid overflow

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -454,16 +454,19 @@
               margin-left: 60px;
 
               .media-header {
+                margin-top: 6px;
                 font-size: 14px;
 
                 &.media-header-limit-2-lines {
                   display: block;
                   display: -webkit-box;
                   max-width: 100%;
-                  height: 43px;
+                  height: 28px;
                   margin: 0 auto;
+                  margin-top: 6px;
+                  margin-bottom: 3px;
                   line-height: 1;
-                  -webkit-line-clamp: 3;
+                  -webkit-line-clamp: 2;
                   -webkit-box-orient: vertical;
                   overflow: hidden;
                   text-overflow: ellipsis;
@@ -472,6 +475,7 @@
 
               .media-subheader {
                 font-size: 10px;
+                margin-bottom: 3px;
               }
             }
 
